# SovereignEngine

./: .gitattributes  .gitignore  README.md
01_LED/: CMakeLists.txt
01_LED/main/: main.c
02_button_pullup/: CMakeLists.txt
02_button_pullup/main/: main.c
03_gpio_if/: CMakeLists.txt
03_gpio_if/main/: main.c
04_button_and_LED/: CMakeLists.txt
04_button_and_LED/main/: main.c
05_gpio_config/: CMakeLists.txt
05_gpio_config/main/: main.c
06_uart/: CMakeLists.txt
06_uart/main/: main.c
07_freeRTOS/: CMakeLists.txt
08_uart_intr/: CMakeLists.txt
09_gpio_interrupt/: CMakeLists.txt
09_gpio_intr/: CMakeLists.txt
10_gpio_rgb_ws2812/: CMakeLists.txt
10_pwm_01/: CMakeLists.txt
10_pwm_01/main/: main.c
10_pwm_02/: CMakeLists.txt
10_pwm_03/: CMakeLists.txt
10_rgb_PWM_02/: CMakeLists.txt
11_BH1750_01/: CMakeLists.txt
11_BMP2803v3_01/: CMakeLists.txt
11_I2C_BMP280_tpa/: CMakeLists.txt
11_QMI8658a_01/: CMakeLists.txt
11_bh1750_esp_idf_driver/: CMakeLists.txt
11_bmp280_03_d/: CMakeLists.txt
11_i2c_AHT30/: CMakeLists.txt
11_i2c_aht30_02/: CMakeLists.txt
11_i2c_bmp280_02/: CMakeLists.txt
12_esp_timer_interrupt_esp_idf/: CMakeLists.txt
12_gptimer_esp_idf_hardware_timer/: CMakeLists.txt
12_software_esp_timer_esp_idf/: CMakeLists.txt
13_st7789_lcd_01/: CMakeLists.txt
14_esp32s3_wifi_esp_idf/: CMakeLists.txt
14_esp32s3_wifi_http_button_led_esp_idf/: CMakeLists.txt
14_esp32s3_wifi_http_led_esp_idf/: CMakeLists.txt
14_esp32s3_wifi_http_led_esp_idf/main/: CMakeLists.txt  main.c
15_adc_01/: CMakeLists.txt
lcd/: CMakeLists.txt
(+37 files in other folders)
